--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -29,6 +29,15 @@
 			width: 100%
 		.callback
 			padding: 12% 0	
+	.footer-addr
+		margin-bottom: 15px
+		.footer-phone
+			font-size: 24px
+			padding-top: 0
+			.fa
+				top: 9px
+		
+
 // ≥768px
 +media-breakpoint-down(sm)
 	.header-contacts
@@ -49,6 +58,7 @@
 	.s-partners
 		.h2
 			margin: 0
+
 	
 // ≥576px
 +media-breakpoint-down(xs)
@@ -64,6 +74,14 @@
 	.header-composition 
 		p
 			font-size: 14px
+
+	.footer-social
+		margin-top: 0
+		.soc li a
+			margin-top: 0
+
+	.footer-menu
+		padding-left: 20px
 
 
 @media only screen and (max-width : 480px)
